# mvp-python-cookiecutter

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
{{ cookiecutter.project_slug }}/.github/workflows/: code-checks.yml  test.yml
